# salvo

./: .gitignore  LICENSE  README.md  TECHNICAL_DOCS.md  pyproject.toml
salvo/: __init__.py  cli.py
salvo/core/: __init__.py  pipeline.py  transport.py
salvo/protocols/: __init__.py  h11.py
tests/: test_cli.py  test_parser.py  test_pipeline.py  test_request.py
